Fix scrollbar bug

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@ a {
 body {
     font-family: 'Oswald', sans-serif;
     height: 100vh;
-    width: 100vw;
+    width: 95vw;
     display: flex;
     box-sizing: border-box;
     flex-direction: column;
